--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "@headlessui/react": "^2.0.4",
     "@heroicons/react": "^2.1.3",
     "@next/font": "^14.2.3",
+    "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-slot": "^1.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "framer-motion": "^11.2.10",
     "heroicons": "^2.1.3",
     "lucide-react": "^0.379.0",
     "next": "14.2.3",
