--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^4.30.0",
     "@headlessui/react": "^2.0.4",
     "@heroicons/react": "^2.1.3",
     "@next/font": "^14.2.3",
