--- a/.env
+++ b/.env
@@ -5,3 +5,5 @@ NEXT_PUBLIC_CLERK_SIGN_UP_URL=/sign-up
 NEXT_PUBLIC_CLERK_AFTER_SIGN_UP_URL=/
 NEXT_PUBLIC_CLERK_AFTER_SIGN_IN_URL=/
 NEXT_PUBLIC_CLERK_AFTER_SIGN_OUT_URL=/
+RESEND_API_KEY=re_ADMJyQij_4KJFjaKB7GGH3gMkJuPGk4nV
+DATABASE_URL=mysql://root:root@localhost:3306/protfolio
