--- a/package.json
+++ b/package.json
@@ -12,9 +12,13 @@
     "@clerk/nextjs": "^4.30.0",
     "@headlessui/react": "^2.0.4",
     "@heroicons/react": "^2.1.3",
+    "@hookform/resolvers": "^3.9.0",
     "@next/font": "^14.2.3",
+    "@prisma/client": "^5.15.0",
+    "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-popover": "^1.0.7",
-    "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-slot": "^1.1.0",
+    "axios": "^1.7.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.3.2",
@@ -22,12 +26,17 @@
     "lucide-react": "^0.379.0",
     "next": "14.2.3",
     "next-themes": "^0.3.0",
+    "prisma-client": "^0.0.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.52.1",
     "react-icon-cloud": "^4.1.4",
     "react-icons": "^5.2.1",
+    "resend": "^3.5.0",
+    "sonner": "^1.5.0",
     "tailwind-merge": "^2.4.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -36,6 +45,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "postcss": "^8",
+    "prisma": "^5.17.0",
     "tailwindcss": "^3.4.5",
     "typescript": "^5"
   }
